welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:37: error: not found: value color
  setCouleurBrosse(color.yellow)
                   ^